V6.xx (xx.03.2021)
 - Introducing variation-filters, based on variation-profiles and variation-types.
   They will improve usability a lot by simplifying the selection of variations/"plugins" by selecting
   and combining variation-types.
   The variation-types are internally defined and connected to the variation by the variation author.
   A variation may have any number of variation-types. e.g. "blur3d" is both of type BLUR and 3D.
   Profiles are not restricted to the use of varaition-types, you may also create profile containing a list of any variations.
   For example. you can create a profile which contains well-proved variations to use inside a splits-elliptic-setup.
   You can also exclude variations.
   You may combine up to two profiles. E.g. to combine your own profile with the internal categories, like "Baseshape".
   E.g., when you  chose your own profile together with the predefined "Baseshape", you get only base-shape-variations
   from your list. (a "Baseshape" is a variation which creates a shape/fractal on its own, like "square")
 - Introducing the first version of an official user manual. It can be reached from within the program under the
   "Help -> User manual" or in the file system inside the lib-subfolder (JWildfire_manual.pdf).
 - ply/PointCloud-export now generates two additional fields: pscale and intensity
 - started to create an official manual (AsciiDoc-based for simple editing)
 - added Alt-F shortcut for Fine edit, by Rick Sidwell
 - new variations
     -kaleidoimg,
     -dc_portal,
     -kaplan by  by Jesus Sosa
 - fix: QuickMutations now inherit the zoom-factor, quality and spatial oversampling settings form the original flame
 - fix: regarding z-coordinate to tqmirror-variation, by Brad Stefanov
 - fix: regarding of priority in the post_falloff2-variation
 - fix: initialize width and height for new flames, by Rick Sidwell
 - removed the advanced code-editor (using jsyntaxpane-1.1.5), which was not properly working in